# Virtual-Try-On

./: .gitignore  CLAUDE.md  README.md  implementation_plan.md  package-lock.json  project-structure.txt  requirements.txt  vite.config.ts
backend/: pyproject.toml  requirements.txt  test_rot.py  test_scale.py
backend/data/bodies/: mannequin_profile.json
backend/data/patterns/: tank_top.json  tshirt.json
backend/pygarment/: __init__.py  data_config.py
backend/pygarment/garmentcode/: __init__.py
backend/pygarment/meshgen/: __init__.py
backend/pygarment/pattern/: wrappers.py
backend/pygarment/tests/: test_vendor_smoke.py
backend/scripts/: analyze_body.py  debug_gc_panel_placement.py  debug_gc_sew_trace.py  debug_gc_stitch_geometry.py  debug_landmarks.py  diagnose_stitch.py  diagnose_tshirt.py  export_for_viewer.py  import_dxf.py  import_tshirt.py  plot_landmarks.py  preview_panels.py  process_body.py  validate_pattern.py  verify_dxf_import.py  verify_gc_alignment.py  visualize_body.py  visualize_mesh.py  visualize_phase1_triangulation.py  visualize_phase2_stitch.py
backend/simulation/: __main__.py
backend/simulation/collision/: __init__.py  body_collider.py  point_triangle.py  resolver.py  self_collider.py  self_resolver.py
backend/simulation/constraints/: __init__.py  bending.py  distance.py  stitch.py
backend/simulation/core/: config.py  engine.py
backend/simulation/export/: __init__.py  gltf_writer.py
backend/simulation/materials/: __init__.py  presets.py
backend/tests/: test_constraints.py  test_integration.py
core/: model_builder.py  (+1 more)
(+332 files in other folders)
